
  * Rebase to new upstreams: 
    Linux v2.6.38-rc6 -- same
    linaro-linux-2.6.38-upstream-1Mar2011 -- new
    Ubuntu-2.6.38-5.32 -- same
  * Enable CONFIG_THUMB2_KERNEL for OMAP[34]
  * Bump ABI
  * Rebase to new upstreams: 
    Linux v2.6.38-rc7
    linaro-linux-2.6.38-upstream-4Mar2011
    ubuntu-natty master-next as of 4Mar2011 

 -- John Rigby <john.rigby@linaro.org>  Tue, 01 Mar 2011 14:11:33 -0700

linux-linaro (2.6.38-1000.1) natty; urgency=low

  * Rebase to new upstreams: 
    Linux v2.6.38-rc5
    linaro-linux-2.6.38-upstream-22Feb2011
    Ubuntu-2.6.38-4.31
  * Enforce CONFIG_PM_ADVANCED_DEBUG for all flavours
    - LP: #713075
  * Temporarily disable display on OMAP4
  * Rebase to new upstreams: 
    Linux v2.6.38-rc6
    linaro-linux-2.6.38-upstream-23Feb2011
    Ubuntu-2.6.38-5.32
  * OMAP4: enable smc instructions in  arch/arm/mach-omap2/sleep34xx.S
  * Disable CONFIG_BINFMT_AOUT for OMAP
    Now consistent with other platforms

 -- John Rigby <john.rigby@linaro.org>  Wed, 23 Feb 2011 16:57:41 -0700

linux-linaro (2.6.37-1003.6) natty; urgency=low

  [ John Rigby ]

  * Rebase to new upstreams:
    linaro-linux-2.6.37-upstream-24Jan2011
    Ubuntu-2.6.37-12.26
       Skipping because of conflicting upstream patches:
         ARM: stack protector: change the canary value per task
         Revert "ARM: stack protector: change the canary value per task"
         UBUNTU: SAUCE: ARM: OMAP: Beagle: support twl gpio differences on xM
  * Add U8500 flavour
  * Rebase to linaro-linux-2.6.37-upstream-27Jan2011
  * Fix Ubuntu upstream version number typo
  * Rebase to linaro-linux-2.6.37-upstream-31Jan2011
  * Rebase to linaro-linux-2.6.37-upstream-08Feb2011
  * Enforce CONFIG_PRINTK_TIME for all flavours
    - LP: #715576
  * Fix package control file to indicate that OMAP4 is supported
    - LP: #714590
  * Enforce CONFIG_PM_DEBUG for all flavours
    - LP: #713075
  * Add s5pv310 flavour
  * enable and enforce CONFIG_BTRFS_FS for all flavours