@@ -14,6 +14,7 @@ linux-linaro (2.6.38-1001.2) UNRELEASED; urgency=low
     Linux v2.6.38-rc7
     linaro-linux-2.6.38-upstream-4Mar2011
     ubuntu-natty master-next as of 4Mar2011 
+  * Re-enable display on OMAP4
 
  -- John Rigby <john.rigby@linaro.org>  Tue, 01 Mar 2011 14:11:33 -0700
 
